--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,22 @@
         url('../../../../Downloads/MorfinSans-Regular.ttf') format('truetype');
 }
 
+@font-face {
+    font-family: "Hero";
+    src: url('./Herolight.woff') format('woff');
+}
+
 body {
     width: 100%;
     height: 2400px;
     background: black url('./bg.png') no-repeat;
     background-size: 100% auto;
+    overflow-x: hidden;
+    font-family: 'Hero';
 }
 
 header {
+    /* position: sticky; */
     padding: 40px 80px;
     display: flex;
     justify-content: space-between;
@@ -29,7 +37,7 @@ header {
     display: flex;
     gap: 56px;
     color: white;
-    font-family: 'Arial';
+    font-family: 'Hero';
     justify-content: space-around;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.2);
@@ -39,6 +47,7 @@ header {
 }
 
 .registration {
+    font-family: 'Hero';
     height: 62px;
     display: flex;
     color: white;
@@ -48,7 +57,7 @@ header {
     font-size: 20px;
     border: 2px solid #8166FF;
     border-radius: 20px;
-    padding: 12px;
+    padding: 12px 16px;
 }
 
 .registration:hover {
@@ -88,7 +97,7 @@ header {
 }
 
 .person__info {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Hero';
     display: flex;
     justify-content: space-between;
     padding: 32px;
@@ -127,8 +136,10 @@ header {
 }
 
 .person__about__badge {
+    font-family: 'MorfinSans';
     margin-left: -180px;
-    padding: 32px;
+    text-align: center;
+    padding: 32px 32px 32px 42px;
     text-wrap: nowrap;
     border-radius: 20px;
     background-color: #8166FF;
@@ -140,6 +151,7 @@ header {
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
+    font-family: 'Hero';
 }
 
 
@@ -158,10 +170,15 @@ header {
     width: 100%;
     display: flex;
     overflow: scroll;
-    gap: 32px
+    gap: 32px;
+}
+
+.speakers__photos::-webkit-scrollbar {
+    display: none;
 }
 
 .speakers__button {
+    font-family: 'Hero';
     margin-top: 20px;
     align-self: flex-end;
     border-radius: 20px;
@@ -172,6 +189,10 @@ header {
     font-weight: 400;
     line-height: normal;
     margin-right: 160px;
+}
+
+.speakers__button:hover {
+    cursor: pointer;
 }
 
 .contacts__container {
@@ -195,6 +216,7 @@ header {
 }
 
 .contacts__button {
+    font-family: 'Hero';
     padding: 16px;
     width: fit-content;
     display: flex;
@@ -212,6 +234,7 @@ header {
 }
 
 .contacts__registration {
+    font-family: 'Hero';
     padding: 16px;
     display: flex;
     color: white;
